--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-PORT=3000
-MONG_URI=mongodb+srv://FabioXY:vgs@videogameshopper.pznnaob.mongodb.net/
+PORT=5173
+MONGO_URI=mongodb+srv://FabioXY:vgs@videogameshopper.pznnaob.mongodb.net/
